--- a/CobroApiP2/appsettings.json
+++ b/CobroApiP2/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CobroApiP2Context": "Server=(localdb)\\mssqllocaldb;Database=CobroApiP2Context-54f3b1ac-5ea2-454e-bbda-786daceeb770;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
